# tj-computer-vision

./: .gitignore  README.md  launch.json
Directions/: Project 1 document.docx  Project 2 Part 1 document.docx  Project 2 Part 2 directions.docx  Project 2 Part 2 document.docx  Project 3 Part 2 directions.docx  Project 3 Part 2 document.docx  Project 3 Part 3 directions.docx  Project 3 Part 3 document.docx  Project 3 Part 4 directions.docx  Project 3 Part 4 document.docx  Project 4 Part 1 directions.docx  Project 4 Part 1 document.docx  Project 4 Part 2 directions.docx  Project 4 Part 2 document.docx  Project 4 Part 3 directions.docx  Project 4 Part 3 document.docx  Project 4 Part 4 directions.docx  Project 4 Part 4 document.docx  Project 5 Part 1 directions.docx  Project 5 Part 1 document.docx  Project 5 Part 2 directions.docx  Project 5 Part 2 document.docx  Project 6 Part 1 directions.docx  Project 6 Part 1 document.docx  Project 6 Part 2 directions.docx  Project 6 Part 2 document.docx  Project 7 Part 1 directions.docx  Project 7 Part 1 document.docx  Project 8 Document.docx
Examples/: output_0.txt  output_1.txt
Labs/: conv.bat  conv_l061.bat  conv_l062.bat  geometry.cpp  image.cpp  imagetest.cpp  l01.cpp  l021.cpp  l031.cpp  l031_list_and_image.cpp  l032.cpp  l033.cpp  l034.cpp  l035.cpp  l03_driver.cpp  l03core.cpp  l041.cpp  l042.cpp  l043.cpp  l044.cpp  l051.cpp  l052.cpp  l053.cpp  l061.cpp  l062.cpp  output.txt  points.txt  points100k_random.txt  points10k_random.txt  results.txt  results200k.txt
PPMViewer/: CMakeLists.txt  glad.c  ppmviewer.cpp
(+46 files in other folders)
